syntax = "proto3";

package api;

option go_package = "./api";

message Coords {
  float lat = 1;
  float lon = 2;
}

message City {
  Coords coords = 1;
  string district = 2;
  string name = 3;
  int32 population = 4;
  string subject = 5;
}

message CitySearchNameResponse {
  enum ResponseCode{
    SUCCESS_CITY = 0;
    FUZZY_CITY = 1;
    EMPTY = 2;
    INTERNAL_ERROR = 3;
  };
  ResponseCode code = 1;
  repeated City options = 2;
}

message CitySearchCoordsResponse{
  enum ResponseCode{
    SUCCESS = 0;
    EMPTY = 1;
    INVALID_COORDS = 2;
    INTERNAL_ERROR = 3;
  }
  ResponseCode code = 1;
  repeated City options = 2;
}



message CityNameRequest {
  string name = 1;
}

message CoordsRequest {
  float lat = 1;
  float lon = 2;
}


service CitySearch {
  rpc SearchByName (CityNameRequest) returns (CitySearchNameResponse);
  rpc SearchByCoords (CoordsRequest) returns (CitySearchCoordsResponse);
}



